# github-copilot-go-demos

./: LICENSE  README.md  go.mod
.github/: copilot-instructions.md
demo10_plan_cdr_pipeline/: demo_details.md  plan_prompt.md
demo1_refactor_function/: go.mod  main.go  notes.txt  sample.txt
demo2_translate_python_to_go/: CMakeLists.txt  Makefile  bank_account.cc  bank_account.go  bank_account.h  bank_account_test.cc  notes.txt  test_README.md
demo3_generate_unit_tests/: email_utils.go  email_utils_test.go  go.mod  main.go  notes.txt
demo4_debug_rca/: go.mod  main.go  notes.txt
demo5_refactor_helpers/: go.mod  main.go  notes.txt
demo6_code_review/: email_utils.go  main.go  notes.txt
demo7_doc_workspace/: main.go
demo7_new_web_api/: main.go  notes.txt
demo8_doc_to_design/: go.mod  main.go  notes.md  specs.md
demo9_school_microservice/: .env.example  .gitignore  API_DOCUMENTATION.go  API_DOCUMENTATION.md  API_GATEWAY_DOCUMENTATION.md  CHANGELOG.md  COUCHBASE_INTEGRATION.md  COUCHBASE_INTEGRATION_COMPLETE.md  COUCHBASE_INTEGRATION_DIAGNOSIS.md  COUCHBASE_INTEGRATION_TEST.md  COUCHBASE_VERIFICATION.md  CRITICAL_BUG_FIX_REQUIRED.md  DEMO.md  DEMO_SUMMARY.md  DEPLOYMENT_GUIDE.md  DESIGN.md  DESIGN_DOCUMENT.md  DOCKERFILE_ANALYSIS.md  DOCUMENTATION_COMPLETION.md  Dockerfile  FIXES_AND_SOLUTIONS.md  KUBERNETES_COMPLETION.md  Makefile  QUICK_START.md  QUICK_START_GUIDE.md  README.md  TESTING_GUIDE.md  TESTING_RESULTS.md  TEST_CONFIGURATION.md  TEST_COVERAGE_CONFIG.md  TEST_QUICK_START.md  basic-test.ps1  container-status.txt  demo_details.md  docker-compose.yml  (+11 more)
(+229 files in other folders)
